# wssql

./: .gitmodules  CMakeLists.txt  README.md  platform-version-prereq.cmake  version.cmake  wssql-build-config.h.cmake
.github/: PULL_REQUEST_TEMPLATE.md
cmake_modules/: FindANTLR.cmake  FindFOP.cmake  FindXSLTPROC.cmake  buildANTLR3c.cmake  commonSetup.cmake  docMacros.cmake
cmake_modules/dependencies/: el5.cmake.in  el6.cmake.in  el7.cmake.in  oneiric.cmake.in  precise.cmake.in  quantal.cmake.in  raring.cmake.in  saucy.cmake.in  squeeze.cmake  suse11.3.cmake.in  trusty.cmake.in  utopic.cmake.in  vivid.cmake.in  xenial.cmake.in  yakkety.cmake.in  zesty.cmake.in
docs/: CMakeLists.txt
docs/WsSQLUG/: CMakeLists.txt  WsSQLUG.xml  WsSQL_ESPWebServiceGuide.xml
docs/common/: Version.xml
esp/: CMakeLists.txt
esp/scm/: CMakeLists.txt  additional.cmake  ws_sql.ecm
esp/services/ws_sql/: CMakeLists.txt  ws_sqlPlugin.cpp  ws_sqlService.cpp  ws_sqlService.hpp
esp/services/ws_sql/SQL2ECL/: ECLEngine.cpp  ECLEngine.hpp  HPCCFile.cpp  HPCCFile.hpp  HPCCFileCache.cpp  HPCCFileCache.hpp  HPCCSQL.tokens  HPCCSQLLexer.c  HPCCSQLLexer.h  HPCCSQLParser.c  HPCCSQLParser.h  HPCCSQLTreeWalker.cpp  HPCCSQLTreeWalker.hpp  SQLColumn.hpp  SQLExpression.cpp  SQLExpression.hpp  SQLJoin.cpp  SQLJoin.hpp
esp/services/ws_sql/SQL2ECL/ANTLR3c/: HPCCSQL.g
initfiles/componentfiles/configxml/: CMakeLists.txt  buildset.xml  cgencomplist.xml  esp_service_wssql.xsl
